--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
 {escript_emu_args, "%%! -escript main cuttlefish_escript +A 0\n"}.
 {escript_incl_apps, [getopt]}.
 
-{deps, [{getopt, {git, "https://github.com/emqx/getopt.git", {tag, "v1.0.2"}}}]}.
+{deps, [{getopt, {git, "https://github.com/wray007/getopt.git", {tag, "v1.0.2"}}}]}.
 
 {profiles,
     [{test, [{deps, [bbmustache]}]},
